--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,70 +3,95 @@ html, body{
     width: 100%;
 }
 
-h1{
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    display: block;
-    font-size: 2em;
-    -webkit-margin-before: 0.67em;
-    -webkit-margin-after: 0.67em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    font-weight: bold;
+.Banner{
+    height: 90px;
+    border-bottom: #cccccc solid 2px;
+    width: 100%;
+    background-color: white;
 }
 
 .Header{
-    height: 80px;
-    border-bottom: #cccccc solid;
-    width: 105%;
-    margin: -8px 0px 0px -8px;
-    background-color: white;
+    height: 90px;
+    width: 960px;
+    margin: auto;
 }
 
 .HeaderLeft{
     float: left;
-    height: 80px;
-    padding: 0px 33px;
+    height: 90px;
     background-color: #4aaaa5;
-    margin-left: 226px;
     color: white;
+    vertical-align: middle;
 }
+
+.HeaderText{
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 38px;
+    margin: 25px 35px;
+    font-weight: bold;
+    /* display: inline-block;
+    vertical-align: middle; */
+    /* vertical align doesn't seem to vertically center the text in the blue-green section so i resorted to setting a margin instead */
+}
+
 .HeaderRight{
     float: right;
     text-align: center;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    vertical-align: middle;
-    height: 80px;
-    margin-right: 218px;
-    
+    /* not sure the table in this section is automatically vertically centered, but i'm not gonna complain */
 }
-br{
-    clear: both;
+
+a{
+    color: #777777;
+    text-decoration: none;
 }
-td{
+
+.table{
+    height: 20px;
+    padding: 32px 0px;
+}
+
+.About, .Portfolio{
     width: 100px;
 }
-.portfolio{
+
+.Contact{
+    width: 70px;
+    text-align: right;
+}
+
+.Portfolio{
     border-left: solid 1px #f3f3f3;
     border-right: solid 1px #f3f3f3;
-    padding: 0px;
 }
-.table{
-    height: 18px;
-    padding: 35px;
-}
+
+/* Above is all the styling for the Banner, which is reused for all three pages. */
+
 .content{
+    width: 960px;
     border: solid #dddddd 1px;
-    margin: 40px 218px 0px 218px;
-    padding: 30px 33px;
+    margin: auto;
+    margin-top: 37px;
     background-color: white;
 }
+
+.ContentTitle{
+    border-bottom: solid #dddddd;
+    color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 38px;
+    margin: 35px 35px 30px 35px;
+    padding: 0px 0px 30px 0px;
+    font-weight: bold;
+}
+
 #profilepic{
     float: left;
     width: 150px;
     height: 150px;
-    margin: 8px 23px 23px 0px;
+    margin: 10px 25px 25px 35px;
 }
-p, input{
+p, input, .TextBoxTitle, #SubmitButton{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 200%;
     color: #777777;
@@ -74,52 +99,81 @@ p, input{
 }
 p{
     font-size: 18px;
-    margin: 15px 0px 0px 0px;
+    margin: 0px 35px 35px 35px;
 }
-input{
-    font-size: 15px
 
+.TextBoxTitle{
+    font-size: 15px;
+    margin: 0px 35px 0px 35px;
 }
-.ContentTitle{
-    width: 100%;
-    border-bottom: solid #dddddd;
-    margin-bottom: 28px;
-    color: #4aaaa5;
+
+.TextBox{
+    width: 865px;
+    padding: 5px 10px 5px 10px;
+    margin: 0px 35px 10px 35px;
 }
-.copyrightbanner{
-    height: 53px;
-    border-top: #4aaaa5 7px solid;
-    width: 105%;
-    margin: 105px 0px 0px -8px;
-    background-color: gray;
+
+.Message{
+    height: 200px;
+}
+
+#SubmitButton{
+    background-color: #4aaaa5;
+    color: white;
+    width: 120px;
+    height: 40px;
+    border: solid transparent;
+    margin: 15px 0px 35px 35px;
+    font-size: 18px;
+}
+
+.PortfolioContent{
+    height: 900px;
+}
+
+.PortfolioTable{
+    width: 700px;
+    margin: 0px 35px 35px 35px;
+}
+
+#Hangman, #RPG, #Trivia, #Rutger, #RPS{
+    /* background-color: green; */
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Schrecklicherpfeilgiftfrosch-01.jpg/220px-Schrecklicherpfeilgiftfrosch-01.jpg);
+    background-size: 273px 205px;
+    background-repeat: no-repeat;
+    float: left;
+    margin: 0px 40px 55px 0px;
+}
+
+#RPS{
+    /* clear: both; */
+}
+
+.ImageText{
+    width: 273px;
+    height: 40px;
+    color: white;
+    background-color: #4aaaa5;
     text-align: center;
-    
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    margin: 130px 0px 8px 0px;
+    padding-top: 20px;
+    font-size: 20px;
+}
+
+.copyrightbanner{
+    height: 55px;
+    border-top: #4aaaa5 7px solid;
+    width: 100%;
+    background-color:#666666;
+    text-align: center;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: small;            
+    font-size: small;
+    position: fixed;
+    bottom: 0px;
 }
 .copyright{
     margin: 30px 0px 0px 0px;
     color: #cccccc;
 }
-a{
-    color: #777777;
-    text-decoration: none;
-}
-.TextBox{
-    width: 97%;
-    padding: 5px 10px 5px 10px;
-/* i don't think this is the right way to align the right edge of the text boxes with the gray border/line */
-}
-.Message{
-    height: 100px;
-}
-#SubmitButton{
-    
-    background-color: #4aaaa5;
-    color: white;
-    width: 120px;
-    height: 40px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    border: solid transparent;
-    margin: 15px 0px 0px 0px;
-}
+
