--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html, body{
-    background: url(https://www.toptal.com/designers/subtlepatterns/patterns/spiration-dark.png);
+    background: url(https://yanananan.github.io/Basic-Portfolio/assets/images/background.png);
     width: 100%;
 }
 
@@ -138,7 +138,7 @@ p{
 
 #Hangman, #RPG, #Trivia, #Rutger, #RPS{
     /* background-color: green; */
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Schrecklicherpfeilgiftfrosch-01.jpg/220px-Schrecklicherpfeilgiftfrosch-01.jpg);
+    background-image: url(https://yanananan.github.io/Basic-Portfolio/assets/images/logopic.jpg);
     background-size: 273px 205px;
     background-repeat: no-repeat;
     float: left;
